--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.example.alpuidesign"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -40,5 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation"com.tbuonomo:dotsindicator:4.3"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
